changed img to local image

--- a/www.codeskulptor.org/index.html
+++ b/www.codeskulptor.org/index.html
@@ -215,7 +215,7 @@ if(window.location.hash) {
       </div>
 
       <div class="reset_border" onclick="this.blur();reset()">
-        <div class="reset_button" onclick="this.blur();"><img src="http://saibotshamtul.github.io/codeskulptor/reset2.svg"></div>
+        <div class="reset_button" onclick="this.blur();"><img src="reset2.svg"></div>
         Reset
       </div> 
       
