--- a/brython_console.htm
+++ b/brython_console.htm
@@ -14,7 +14,8 @@
 
     <link rel=stylesheet href="http://brython.info/doc/doc_brython.css">
 
-    <script src="http://brython.info/src/brython.js"></script>
+    <script type="text/javascript" orig_src="http://brython.info/src/brython.js"></script>
+    <script type="text/javascript" src="http://brython.info/src/brython_dist.js"></script>
 
     <style>
     .codearea {
