--- a/brython_console.htm
+++ b/brython_console.htm
@@ -14,8 +14,9 @@
 
     <link rel=stylesheet href="http://brython.info/doc/doc_brython.css">
 
-    <script type="text/javascript" orig_src="http://brython.info/src/brython.js"></script>
+    <!--script type="text/javascript" src="http://brython.info/src/brython.js"></script-->
     <script type="text/javascript" src="http://brython.info/src/brython_dist.js"></script>
+    <script type="text/javascript" src="http://brython.info/src/py_VFS.js" ></script>
 
     <style>
     .codearea {
