--- a/brython_console.htm
+++ b/brython_console.htm
@@ -55,7 +55,7 @@ import sys
 import traceback
 
 from browser import document as doc
-from browser import window, alert, console
+from browser import win, alert, console
 
 _credits = """    Thanks to CWI, CNRI, BeOpen.com, Zope Corporation and a cast of thousands
     for supporting Python development.  See www.python.org for more information."""
@@ -127,7 +127,8 @@ _status = "main"  # or "block" if typing inside a block
 class versioninfo(object):
     def __str__(self):
         v = sys.implementation.version
-        return "Brython %s.%s.%s on %s %s" % (v[0], v[1], v[2], window.navigator.appName, window.navigator.appVersion)
+        #return "Brython %s.%s.%s on %s %s" % (v[0], v[1], v[2], window.navigator.appName, window.navigator.appVersion)
+        return "Brython %s.%s.%s on %s %s" % (v[0], v[1], v[2], win.navigator.appName, win.navigator.appVersion)
     def __repr__(self):
         return str(self)
 
