changed py_VFS to py_VFS.js so the correct file will be fetched

--- a/brython_console.htm
+++ b/brython_console.htm
@@ -19,7 +19,7 @@
     <!--script type="text/javascript" src="http://brython.info/src/brython_dist.js"></script-->
     <script type="text/javascript" src="brython.info..src..brython_dist.js"></script>
     <!--script type="text/javascript" src="http://brython.info/src/py_VFS.js"></script-->
-    <script type="text/javascript" src="brython.info..src..py_VFS"></script>
+    <script type="text/javascript" src="brython.info..src..py_VFS.js"></script>
 
     <style>
     .codearea {
